Fixed spacing on graph page

--- a/visualization/graph.css
+++ b/visualization/graph.css
@@ -1,6 +1,5 @@
 body{
   margin:0;
-  padding:20px;
   font:12px/17px Arial, sans-serif;
   background:#f9f9f9;
 }
@@ -8,7 +7,6 @@ body{
 #visualization{
 	display: inline-block;
 	width: 1100px;
-	margin-top:20px;
 }
 
 #nodelabel{
